# fppdf

./: .gitignore  README  example_full_short.yml  example_runcard.yml  fixpar_nnpdf.py  fixpar_nnpdf.py~  fixpar_nnpdf_backup.py  git_push.sh  gitignore.txt  pyproject.toml
configs/: fit_comp.yaml  fit_comp.yaml~  fit_comp_old.yaml  fit_example.yaml  fit_mshtfit_publication_longmin.yaml  fit_mshtfit_publication_shortmin.yaml
input/: MSHT20nnlo_as118_mem1.info
outputs/evgrids/: post_fit.sh
outputs/evgrids/test/nnfit/replica_1/: test.exportgrid
reproduce_results/fixed_parametrization/: n3lo.yml  nnlo.yml
reproduce_results/nnpdf/: nnpdf_an3lo-mhou.yaml  nnpdf_an3lo.yaml  nnpdf_nnlo-mhou.yaml  nnpdf_nnlo.yaml
reproduce_results/reports/: chi2_byprocess_an3lo.yaml  chi2_byprocess_an3lo_mhou.yaml  chi2_byprocess_nnlo.yaml  chi2_byprocess_nnlo_mhou.yaml  lumi_plots_msht.yaml  lumi_plots_nnpdf.yaml
src/: chebyshevs.py  chi2s.py  chi2s.py~  data_theory.py  data_theory.py~  error_calc.py  global_pars.py  global_pars.py~  inputs.py  inputs.py~  levmar.py  levmar.py~  lhapdf_funs.py  lhapdf_funs.py~  lhapdf_funs_backup.py  msht_theory.py  outputs.py  pdfs.py  pdfs.py~
src/fixparpdf/: chebyshevs.py  chi2s.py  data_theory.py  error_calc.py  global_pars.py  inputs.py  levmar.py  lhapdf_funs.py  outputs.py  pdfs.py  test_evolve.py  utils.py
src/fixparpdf/scripts/: fixpar_evolve.py  fixpar_nnpdf.py  fixpar_setupfit.py  fixparpdf_exec.py  hessianerr_exec.py
src/fppdf/: chi2s.py  data_theory.py  error_calc.py  global_pars.py  inputs.py  levmar.py  lhapdf_funs.py  outputs.py  pdfs.py  utils.py
src/fppdf/scripts/: fixpar_evolve.py  fixpar_setupfit.py  fixparpdf_exec.py  hessianerr_exec.py
src_backup/: data_theory.py  levmar.py  outputs.py  pdfs.py
