[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fixparpdf"
version = "0.0.0"
description = "A framework for the extraction of Parton Distribution Functions using abitrary parametrizations"
readme = "README"
authors = [
    "Juan M. Cruz-Martinez <juacrumar@lairen.eu>",
    "Lucian Harland-Lang <l.harland-lang@ucl.ac.uk>",
    "Tommaso Giani <tgiani@nikhef.nl>"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
license = "GPL-3.0-or-later"
repository = "https://github.com/LucianHL/fixpar_nnpdf"
packages = [ 
    { include = "fixparpdf", from = "src" },
]

[tool.poetry.scripts]
# The fixparpdf script does the central PDF determination at the initial scale
fixpar_fitpdf = "fixparpdf.scripts.fixparpdf_exec:main"
# Hesianerr produces the hessian errors
fixpar_hessianerr = "fixparpdf.scripts.hessianerr_exec:main"
# fixpar_evolve takes a folder of .exportgrids and produces the corresponding LHAPDF grid 
fixpar_evolve = "fixparpdf.scripts.fixpar_evolve:main"
# fixpar script to pre-compute the theory covariance matrix
fixpar_setupfit = "fixparpdf.scripts.fixpar_setupfit:main"

[tool.poetry.dependencies]
python = ">=3.9"
nnpdf = { git = "https://github.com/NNPDF/nnpdf" }
# We are using some improvements that will be included in the NNPDF 4.1.1 code release
# but currently need to be installed from the repository

[tool.black]
line-length = 100
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
atomic = true
line_length = 100
profile = "black" # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#custom-configuration
skip_gitignore = true
known_first_party = ["fixparpdf"]
force_sort_within_sections = true
